fixed form layout issues

--- a/app/stylesheets/delegator.sass
+++ b/app/stylesheets/delegator.sass
@@ -11,5 +11,17 @@
   background-image: url("../../images/background_pattern.jpg")
 
 fieldset
+  padding: 0
+  label
+    display: block
   legend
+    margin-left: 1em
+    color: #000000
     font-weight: bold
+  ol
+    padding: 1em 1em 0 1em
+    list-style: none !important
+  li
+    padding-bottom: 1em
+  .submit
+    border-style: none
